crates/oxc_css/tests/error/scss/at-rule/sass-import/trailing-comma.snap
---
source: crates/oxc_css/tests/error.rs
---
error: expect token `<string>`, but found `;`
  ┌─ trailing-comma.scss:4:1
  │
4 │ ;
  │ ^


